<resources>
    <string name="app_name">JoinIn</string>
    <string name="facebook_app_id" translatable="false">610994362397688</string>
    <string name="parse_app_id" translatable="false">wCQqXz3NAoE3lr7tj0CMsS08OyIIUogS7np31Amg</string>
    <string name="parse_client_key" translatable="false">RGor6tHC5r134cvWrHdDuNgrqkeOmlNO1Dee8O58</string>

    <string name="walkthrText1"><b>Welcome</b> \n Sign up to do what you love and meet new people of same interests.</string>
    <string name="walkthrText2"><b>Browse</b> \n Explore what events are happening around you.</string>
    <string name="walkthrText3"><b>Search</b> \n Looking for a specific someone or activity in nearby area? Our app can help you.</string>
    <string name="walkthrText4"><b>Join in</b> \n Do the thing you love and meet cool people. Everything is at your fingertips!</string>

    <string name="Message">MESSAGE</string>
    <string name="Message_">Message</string>
    <string name="Favorite">Favorite</string>
    <string name="Status">Status:</string>
    <string name="Name">Your name</string>
    <string name="Intro">Intro</string>
    <string name="Interests">Interests</string>
    <string name="RA">Recent Activities</string>
    <string name="hint1">What are you doing?</string>
    <string name="hint2">Where are you now?</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="google_play_services_issue">Please check Google Service up-to-date</string>
    <string name="Please_get_another_location">Please get another place</string>
    <string name="Edit">Edit Profile</string>
    <string name="Save_changes">SAVE CHANGES</string>

    <string name="filter">Filter</string>
    <string name="Me">Me</string>
    <string name="here">here</string>
    <string name="Chat_history">Chat Box</string>
    <string name="Favourite">Favorite</string>
    <string name="Unfavourite">Unfavorite</string>
    <string name="My_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_facebook">Log in with Facebook</string>
    <string name="the_terms_and_privacy_policy"> the Terms and Privacy Policy</string>
    <string name="by_signing_in">By signing in, I accept</string>
    <string name="change">Change</string>
    <string name="log_out">Log Out</string>

    <string name="action_settings">Settings</string>
    <string name="action_details">Conversation Setting</string>
    <string name="action_sendlogs">Send Debug Info</string>

    <string name="title_conversations_list">Conversations</string>
    <string name="title_select_conversation">New Message</string>
    <string name="title_messages_list">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_conversation_details">Details</string>

    <string name="alert_message_resuming">Resuming Session</string>

    <string name="alert_message_logout">Log out?</string>
    <string name="alert_message_delete_message">Delete message?</string>
    <string name="alert_message_delete_conversation">Delete conversation?</string>

    <string name="alert_dialog_logout">Logging Out&#8230;</string>

    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_delete_my_devices">For myself</string>
    <string name="alert_button_delete_all_participants">For everyone</string>
    <string name="alert_button_remove">Remove</string>
    <string name="alert_button_block">Block</string>
    <string name="alert_button_unblock">Unblock</string>
    <string name="alert_button_logout">Log Out</string>

    <string name="attachment_menu_camera">Camera</string>
    <string name="attachment_menu_gallery">Gallery</string>
    <string name="attachment_menu_location">Location</string>

    <string name="toast_group_name_updated">Group name updated</string>
    <string name="toast_failed_to_deauthenticate">Failed to deauthenticate: %1$s</string>
    <string name="toast_copied_to_clipboard">Copied to clipboard</string>

    <string name="conversation_details_title_options">Options</string>
    <string name="conversation_details_hint_group_name">Group Name</string>
    <string name="conversation_details_switch_show_notifications">Show Notifications</string>
    <string name="conversation_details_button_leave_group">Leave Group</string>
    <string name="conversation_details_title_participants">Participants</string>
    <string name="conversation_details_button_add_participants">Add Participants</string>

    <string name="settings_clipboard_description">Settings</string>
    <string name="settings_content_connected">Connected</string>
    <string name="settings_content_disconnected">Disconnected</string>
    <string name="settings_content_app_version">Name %1$s / Code %2$d</string>
    <string name="settings_content_android_version">Version %1$s / API level %2$d</string>
    <string name="settings_content_disk_unlimited">Unlimited</string>
    <string name="settings_content_disk_usage">%1$.2f %2$s</string>
    <string name="settings_content_disk_gb">GB</string>
    <string name="settings_content_disk_mb">MB</string>
    <string name="settings_content_disk_kb">KB</string>
    <string name="settings_content_disk_b">B</string>
    <string name="settings_title_account">Account</string>
    <string name="settings_button_log_out">Log Out</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_switch_show_notifications">Show Notifications</string>
    <string name="settings_title_debug">Debug</string>
    <string name="settings_switch_verbose_logging">Verbose Logging</string>
    <string name="settings_title_app_version">App Version</string>
    <string name="settings_title_android_version">Android Version</string>
    <string name="settings_title_atlas_version">Atlas Version</string>
    <string name="settings_title_layer_version">Layer Version</string>
    <string name="settings_title_user_id">User ID</string>
    <string name="settings_title_statistics">Statistics</string>
    <string name="settings_title_conversations">Conversations</string>
    <string name="settings_title_messages">Messages</string>
    <string name="settings_title_unread_messages">Unread Messages</string>
    <string name="settings_title_rich_content">Rich Content</string>
    <string name="settings_title_disk_utilization">Disk Utilization</string>
    <string name="settings_title_disk_allowance">Disk Allowance</string>
    <string name="settings_title_auto_download_types">Auto-Download MIME Types</string>

    <string name="notifications_num_more">+%1$d more</string>
    <string name="notifications_new_messages">%1$s new messages</string>

    <string name="Try_again">Try again</string>
    <string name="Image_Pick">Share your picture with JoinIn</string>
    <string name="Hold_on">Hold on</string>
    <string name="Loading">Loading&#8230;</string>
    <string name="Online">online</string>
    <string name="Offline">offline</string>
    <string name="No_one_near">No online user close to you now&#8230;</string>
    <string name="Timeline">Around Me</string>
    <string name="filter_changed">Filter Changed</string>

    <string name="Continue">Continue</string>
    <string name="Deny_permission_try_again">Require accepting all permissions - try again later</string>
    <string name="Close">Close</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8112894826901791/3086324866</string>
    <string name="cancel">CANCEL</string>
    <string name="distance">Distance</string>
    <string name="age_range">Age range</string>
    <string name="gender">Gender</string>
    <string name="only_men">Only Men</string>
    <string name="only_women">Only Women</string>
    <string name="men_and_women">Men and Women</string>
    <string name="chat_now">Chat now</string>
    <string name="hidden_age">hidden age</string>
    <string name="year_old">" years old"</string>
    <string name="add_activity">Add Activity</string>
    <string name="choose_action">Choose Action</string>
    <string name="what_are_you_up_to">What are you up to?</string>
    <string name="post">Post</string>
    <string name="you_need_to_find_people_nwe_need_your_current_location_to_help_you_find_friends">You need to find people? \nWe need your current location to help you find friends.</string>
    <string name="go_online">Go online</string>

    <string name="atlas_message_composer_hint">Message</string>
    <string name="atlas_message_composer_send_button">Send</string>

</resources>
