<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/main_color_origin_reverse">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/Edit"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/img_done"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_done_white_24dp" />
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@+id/img_done"
            android:text="@string/Cancel"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_name"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:hint="@string/Name"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_bio"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/edt_intro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:hint="@string/Intro"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_interest"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/edt_interests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:hint="@string/Interests"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>