<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v4.view.ViewPager
        android:id="@+id/walkthr_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.pixelcan.inkpageindicator.InkPageIndicator
        android:id="@+id/ink_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:animationDuration="320"
        app:currentPageIndicatorColor="@android:color/white"
        app:dotDiameter="8dp"
        app:dotGap="16dp"
        app:pageIndicatorColor="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/btnContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayTerms"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:gravity="center">


        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@drawable/btn_facebook"
            android:paddingLeft="66dp"
            android:paddingRight="42dp"
            android:text="@string/log_in_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/loginBtn"
            android:layout_alignStart="@+id/loginBtn"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/com_facebook_button_icon" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="3dp"
            android:text="@string/by_signing_in"
            android:textColor="@android:color/white"
            android:textSize="11sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:text="@string/the_terms_and_privacy_policy"
            android:textAllCaps="false"
            android:textColor="@color/colorHyperLink"
            android:textSize="11sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:src="@mipmap/banner" />

</RelativeLayout>